<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:paddingBottom="@dimen/activity_vertical_margin"
                                                   android:paddingLeft="@dimen/activity_horizontal_margin"
                                                   android:paddingRight="@dimen/activity_horizontal_margin"
                                                   android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activity.PlayActivity">

    <TextView
            android:id="@+id/play_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_round"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"/>

    <Button
            android:id="@+id/play_give_up"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:text="@string/action_give_up"
            android:textSize="20sp"
            android:background="@drawable/bg_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"/>

    <View
            android:id="@+id/play_separate_line_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/play_give_up"/>

    <ImageView
            android:id="@+id/play_image_opposite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_question_mark_foreground"
            app:layout_constraintTop_toTopOf="@id/play_separate_line_1"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/desc_opposite"/>

    <ProgressBar
            android:id="@+id/play_countdown_progressbar_you"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/play_separate_line_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:max="60"
            android:progress="60"
            android:visibility="invisible"/>

    <TextView
            android:id="@+id/play_countdown_text_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_countdown"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/play_countdown_progressbar_you"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:visibility="invisible"/>

    <TextView
            android:id="@+id/play_bubble_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="180dp"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:visibility="invisible"
            android:background="@drawable/bg_border"
            app:layout_constraintTop_toBottomOf="@id/play_image_opposite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24sp"
            android:layout_marginEnd="24dp"/>
    
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/play_separate_line_1"
            app:layout_constraintBottom_toTopOf="@id/play_send"/>

    <TextView
            android:id="@+id/play_bubble_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="180dp"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:visibility="invisible"
            android:background="@drawable/bg_border"
            app:layout_constraintBottom_toTopOf="@id/play_image_me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24sp"
            android:layout_marginEnd="24dp"/>

    <ImageView
            android:id="@+id/play_image_me"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:src="@drawable/ic_me_foreground"
            app:layout_constraintBottom_toTopOf="@id/play_question"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/desc_me"/>

    <TextView
            android:id="@+id/play_countdown_text_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_countdown"
            android:textSize="24sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            app:layout_constraintBottom_toTopOf="@id/play_countdown_progressbar_me"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"/>

    <ProgressBar
            android:id="@+id/play_countdown_progressbar_me"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/play_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:max="60"
            android:progress="60"
            android:visibility="invisible"/>

    <EditText
            android:id="@+id/play_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_question"
            android:inputType="textNoSuggestions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="96dp"
            android:autofillHints="@string/prompt_question"/>

    <Button
            android:id="@+id/play_send"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:text="@string/action_send"
            android:textSize="20sp"
            android:background="@drawable/bg_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>